improved all tests